[tool.poetry]
name = "helper"
version = "0.1.0"
description = ""
authors = ["Kozmin Danimir <kozmindd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^22.0"
pytz = "^2025.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
